<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">pillpal</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_1_month">1 Month</string>
    <string name="lbl_p_llpal">P  llPal</string>
    <string name="lbl_tue">Tue</string>
    <string name="lbl_thu">Thu</string>
    <string name="lbl_250_mg">250 mg</string>
    <string name="lbl_20">20</string>
    <string name="lbl_p">P</string>
    <string name="lbl_23">23</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">22</string>
    <string name="msg_check_reaction">Check reaction between two or more drugs that can affect how the drugs work.</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_28">28</string>
    <string name="msg_check_interacti">Check Interactions</string>
    <string name="lbl_moderate">MODERATE</string>
    <string name="lbl_filly">Filly</string>
    <string name="lbl_description">DESCRIPTION</string>
    <string name="msg_warning_if_no">WARNING: If no interactions are found between two drugs, it does not necessarily mean that no interactions exist. Always CONSULT with a HEALTHCARE PROFESSIONAL.</string>
    <string name="msg_community_guide">Community Guidelines</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lbl_severity">SEVERITY</string>
    <string name="msg_daily_for_1_mon">Daily for 1 Month</string>
    <string name="lbl_set_reminder">Set Reminder</string>
    <string name="lbl_hi_i_m_pillpal">Hi, I\u2019m PillPal </string>
    <string name="msg_remember_to_tak">Remember to take medications as prescribed.</string>
    <string name="lbl_medicine_name">Medicine Name</string>
    <string name="lbl_sound">Sound</string>
    <string name="lbl_warning">WARNING: </string>
    <string name="msg_if_no_interacti">If no interactions are found between two drugs, it does not necessarily mean that no interactions exist. Always </string>
    <string name="lbl_llpal">  llPal</string>
    <string name="lbl_sat">Sat</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="msg_allow_notificat">Allow Notification</string>
    <string name="lbl_18">18</string>
    <string name="msg_drug_drug_inter">Drug-drug interaction</string>
    <string name="lbl_19">19</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="msg_don_t_forget_to">Don\u2019t forget to  take your pills!</string>
    <string name="lbl_wed">Wed</string>
    <string name="lbl">.</string>
    <string name="lbl_sun">Sun</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_support">Support</string>
    <string name="lbl_time_schedule">Time &amp; Schedule</string>
    <string name="msg_probiotics_250">Probiotics, 250mg</string>
    <string name="lbl_allow_banner">Allow Banner</string>
    <string name="lbl_sign_out">Sign Out</string>
    <string name="lbl_nothing_here">Nothing Here</string>
    <string name="lbl_09_00_am">09:00 AM</string>
    <string name="lbl_consult">CONSULT</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_yung">Yung</string>
    <string name="msg_extended_descri">EXTENDED DESCRIPTION</string>
    <string name="msg_medication_remi">Medication Reminder</string>
    <string name="lbl_probiotics">Probiotics</string>
    <string name="lbl_hi_charles">Hi, Charles</string>
    <string name="lbl_september_2023">September 2023 </string>
    <string name="lbl_warfarin">Warfarin</string>
    <string name="lbl_08_30_pm">08:30 PM</string>
    <string name="lbl_notification">Notification</string>
    <string name="msg_terms_of_servic">Terms of Service</string>
    <string name="lbl_medicine_type">Medicine Type</string>
    <string name="lbl_vibration">Vibration</string>
    <string name="lbl_add_two_drugs">Add two drugs:</string>
    <string name="lbl_hi_ibs">Hi, Ibs</string>
    <string name="lbl_load_example">Load example</string>
    <string name="msg_track_your_drug">Track your drug interaction and medication reminder information</string>
    <string name="lbl_fri">Fri</string>
    <string name="lbl_clear">Clear</string>
    <string name="lbl_dosage">Dosage</string>
    <string name="lbl_to_take">To Take</string>
    <string name="lbl_mon">Mon</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_with_a"> with a </string>
    <string name="msg_healthcare_prof">HEALTHCARE PROFESSIONAL</string>
    <string name="msg_add_drug_to_che">ADD DRUG TO CHECK FOR INTERACTIONS</string>
    <string name="msg_acetaminophen">Acetaminophen [Tylenol]</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
