<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listtwentyRowModel" type="com.pillpal.app.modules.calendardateempty.data.model.ListtwentyRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowtwenty"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtTwenty"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.2" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listtwentyRowModel.txtTwenty}"
            style="@style/txtRobotoromansemibold20" tools:text="@string/lbl_20"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTwentyOne"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_weight="0.18" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listtwentyRowModel.txtTwentyOne}"
            style="@style/txtRobotoromansemibold20" tools:text="@string/lbl_21"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTwentyTwo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_weight="0.2" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listtwentyRowModel.txtTwentyTwo}"
            style="@style/txtRobotoromansemibold20" tools:text="@string/lbl_22"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTwentyThree"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.2" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listtwentyRowModel.txtTwentyThree}"
            style="@style/txtRobotoromansemibold20" tools:text="@string/lbl_23"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTwentyFour"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_weight="0.2" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listtwentyRowModel.txtTwentyFour}"
            style="@style/txtRobotoromansemibold20" tools:text="@string/lbl_24"/>
    </LinearLayout>
</layout>
